[package]
name = "myhome"
version = "0.1.1"
authors = ["ajesuscode"]
license = "MIT"
description = "A tool to check electricity and water status in France"
repository = "https://github.com/ajesuscode/home"
keywords = ["cli", "electricity", "water", "edf", "agur"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.34", features = ["unstable-locales"]}
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
